// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchInputWithPlaceholder /> matches snapshot when explicitly collapsed 1`] = `
<Fragment>
  <SearchInput
    forwardRef={null}
    isExpanded={false}
    isLoading={false}
    onClick={[Function]}
    onEnter={[Function]}
    onInput={[Function]}
    onNavigate={[Function]}
    onOpen={[MockFunction]}
    placeholder="collapsed placeholder"
    preQueryScreenViewed={[MockFunction]}
    searchSessionId="testsessionid"
    tooltipContent={
      <styled.div>
        Search
      </styled.div>
    }
    value=""
  />
</Fragment>
`;

exports[`<SearchInputWithPlaceholder /> matches snapshot when explicitly expanded 1`] = `
<Fragment>
  <WithAnalyticsEvents(WrappedComponent)
    debounceTime={0}
    query=""
  />
  <SearchInput
    forwardRef={null}
    isExpanded={true}
    isLoading={false}
    onClick={[Function]}
    onEnter={[Function]}
    onInput={[Function]}
    onNavigate={[Function]}
    onOpen={[MockFunction]}
    placeholder="expanded placeholder"
    preQueryScreenViewed={[MockFunction]}
    searchSessionId="testsessionid"
    tooltipContent={
      <styled.div>
        Search
      </styled.div>
    }
    value=""
  />
</Fragment>
`;
